force-app/main/default/objects/CTB_Staging__c/CTB_Staging__c.object-meta.xml
<CustomObject>
    <label>CTB Staging</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTB Stagings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>