force-app/main/default/objects/CTB_Staging__c/fields/Account_Original_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Original_Open_Date__c</fullName>
    <description>The date the account was opened with the original creditor</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the account was opened with the original creditor</inlineHelpText>
    <label>Account Original Open Date</label>
    <type>Date</type>
</CustomField>