force-app/main/default/objects/CTB_Staging__c/fields/Accounts_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Validation_Date__c</fullName>
    <description>Accounts Validation Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Accounts Validation Date</inlineHelpText>
    <label>Accounts Validation Date</label>
    <type>DateTime</type>
</CustomField>