force-app/main/default/objects/CTB_Staging__c/fields/Acknowledgement_date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_date__c</fullName>
    <description>Date debtor acknowledged ownership of debt</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date debtor acknowledged ownership of debt</inlineHelpText>
    <label>Acknowledgement Date</label>
    <type>Date</type>
</CustomField>