force-app/main/default/objects/CTB_Staging__c/fields/Balance_Owed__c.field-meta.xml
<CustomField>
    <fullName>Balance_Owed__c</fullName>
    <description>The balance owed on this account.</description>
    <inlineHelpText>The balance owed on this account.</inlineHelpText>
    <label>Balance Owed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>