force-app/main/default/objects/CTB_Staging__c/fields/Charge_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_Date__c</fullName>
    <description>Charge Off Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Charge Off Date</inlineHelpText>
    <label>Charge Off Date</label>
    <type>Date</type>
</CustomField>