force-app/main/default/objects/CTB_Staging__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>This field is created as a part of CTB Automation and this field will be used to store unique identifier of Insolvency Account which is used by CTB Business user to reference Insolvency account back to SF system.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DRN Debt Product ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>