force-app/main/default/objects/CTB_Staging__c/fields/CTB_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>CTB_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CTB Date of Birth</label>
    <type>Date</type>
</CustomField>