force-app/main/default/objects/CTB_Staging__c/fields/CTB_Update_Filename__c.field-meta.xml
<CustomField>
    <fullName>CTB_Update_Filename__c</fullName>
    <description>This field is created a part of CTB Automation Ticket and this field will store the file name from which this record was created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CTB Update Filename</label>
    <length>200</length>
    <type>Text</type>
</CustomField>