force-app/main/default/objects/CTB_Staging__c/fields/Debtor_1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Last_Name__c</fullName>
    <description>Last name of the primary debtor.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last name of the primary debtor.</inlineHelpText>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>