force-app/main/default/objects/CTB_Staging__c/fields/Debtor_Estate_Number__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Estate_Number__c</fullName>
    <description>This field is created as a part of CTB Automation and it will be used to store Debtor estate number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estate Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>