force-app/main/default/objects/CTB_Staging__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>