force-app/main/default/objects/CTB_Staging__c/fields/Insolvency_Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Last_Payment_Date__c</fullName>
    <description>The last payment date for this Insolvency</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last payment date for this Insolvency</inlineHelpText>
    <label>Insolvency Last Payment Date</label>
    <type>Date</type>
</CustomField>