force-app/main/default/objects/CTB_Staging__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>The current interest rate charged on this account.</description>
    <inlineHelpText>The current interest rate charged on this account.</inlineHelpText>
    <label>Interest Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>