force-app/main/default/objects/CTB_Staging__c/fields/Judgement_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date judgement was granted</inlineHelpText>
    <label>Judgement Date</label>
    <type>Date</type>
</CustomField>