force-app/main/default/objects/CTB_Staging__c/fields/Last_Payment_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount_3__c</fullName>
    <description>The last payment amount (3) for this account</description>
    <inlineHelpText>The last payment amount (3) for this account</inlineHelpText>
    <label>Last Payment Amount (3)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>