force-app/main/default/objects/CTB_Staging__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>The last payment date (1) for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last payment date (1) for this account.</inlineHelpText>
    <label>Last Payment Date (1)</label>
    <type>Date</type>
</CustomField>