force-app/main/default/objects/CTB_Staging__c/fields/Last_Statement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Amount__c</fullName>
    <description>The amount owning on the last statement sent (1) for this account.</description>
    <inlineHelpText>The amount owning on the last statement sent (1) for this account.</inlineHelpText>
    <label>Last Statement Amount (1)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>