force-app/main/default/objects/CTB_Staging__c/fields/Last_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Date__c</fullName>
    <description>The date the last statement was sent (1) for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the last statement was sent (1) for this account.</inlineHelpText>
    <label>Last Statement Date (1)</label>
    <type>Date</type>
</CustomField>