force-app/main/default/objects/CTB_Staging__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <description>Open Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Open Date</inlineHelpText>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>