force-app/main/default/objects/CTB_Staging__c/fields/Remitted_Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Remitted_Cheque_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remitted Cheque Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>