force-app/main/default/objects/CTB_Staging__c/recordTypes/Insolvency_Payment.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Payment</fullName>
    <active>true</active>
    <label>Insolvency Payment</label>
</RecordType>