force-app/main/default/objects/CTB_Staging__c/listViews/Error_Records.listView-meta.xml
<ListView>
    <fullName>Error_Records</fullName>
    <columns>NAME</columns>
    <columns>Correlation_Id__c</columns>
    <columns>CTB_Update_Filename__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Error Records</label>
    <sharedTo>
        <group>CTB_Staging_Group</group>
    </sharedTo>
</ListView>